Added a border and padding

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        <div>
-            <img src="images/Malik Professional Image.png">
+        <div class="card">
+            <img 
+            src="images/Malik Professional Image.png" 
+            alt="A Picture of Malik Girondin Smiling at the Camera with a Colorful Background" 
+            div class="avatar">
             <h3>Malik Girondin</h3>
             <p>Content Engineer</p>
             <h4>Florida, United States</h4>
