Added Flexbox to the div class 'card'

--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     </head>
     <body>
         <div class="card">
-            <img 
-            src="images/Malik Professional Image.png" 
-            alt="A Picture of Malik Girondin Smiling at the Camera with a Colorful Background" 
-            div class="avatar">
-            <h3>Malik Girondin</h3>
-            <p>Content Engineer</p>
-            <h4>Florida, United States</h4>
+            <div>
+                <img 
+                src="images/Malik Professional Image.png" 
+                alt="A Picture of Malik Girondin Smiling at the Camera with a Colorful Background" 
+                div class="avatar">
+            </div>
+            <div>
+                <h3>Malik Girondin</h3>
+                <p>Content Engineer</p>
+                <h4>Florida, United States</h4>
+            </div>
         </div>
     </body>
 </html>
