Added border-blue to the div classes

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
                 <img 
                 src="images/Malik Professional Image.png" 
                 alt="A Picture of Malik Girondin Smiling at the Camera with a Colorful Background" 
-                div class="avatar">
+                div class="avatar border-blue">
             </div>
-            <div>
+            <div class="border-blue">
                 <h3>Malik Girondin</h3>
                 <p>Content Engineer</p>
                 <h4>Florida, United States</h4>
