Centered the card

--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        <div class="card">
-            <div>
+        <div class="card border-blue">
                 <img 
                 src="images/Malik Professional Image.png" 
                 alt="A Picture of Malik Girondin Smiling at the Camera with a Colorful Background" 
                 div class="avatar border-blue">
-            </div>
             <div class="border-blue">
                 <h3>Malik Girondin</h3>
                 <p>Content Engineer</p>
