Colored the business card

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        <div class="card border-blue">
+        <div class="card">
                 <img 
                 src="images/Malik Professional Image.png" 
                 alt="A Picture of Malik Girondin Smiling at the Camera with a Colorful Background" 
-                div class="avatar border-blue">
-            <div class="border-blue">
+                div class="avatar">
+            <div>
                 <h3>Malik Girondin</h3>
                 <p>Content Engineer</p>
                 <h4>Florida, United States</h4>
